--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "@mui/system": "^5.5.0",
     "@mui/utils": "^5.4.4",
     "@mui/x-data-grid": "^5.6.0",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.14.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@tabler/icons": "^1.54.0",
     "apexcharts": "^3.33.2",
@@ -51,7 +53,9 @@
     "material-ui-popup-state": "^2.0.0",
     "mongoose": "^6.3.3",
     "next": "12.1.0",
+    "next-auth": "^4.3.4",
     "next-transpile-modules": "^9.0.0",
+    "nodemailer": "^6.7.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -104,6 +108,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
+    "prisma": "^3.14.0",
     "react-error-overlay": "6.0.9",
     "sass": "^1.49.7"
   }
